--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Jitkapat S.</title>
+    <title>Attapol Rutherford - Chulalongkorn University</title>
   </head>
 
   <body>
@@ -16,24 +15,21 @@
 
 	<div class="container">
 		<div class="row my-5">
+			<div class="col-md-8">
+			<h1>Attapol Rutherford | อรรถพล ธำรงรัตนฤทธิ์</h1>
+			<h4>attapolrutherford@gmail.com &emsp;
+				<a href="https://www.linkedin.com/in/terutherford/"><img src="icons/linkedin.png" width=20></a>
+				<a href="https://scholar.google.co.th/citations?user=7SsloT4AAAAJ&hl=en"><img src="icons/gscholar.png" width=20></a>
+			</h4>
+			<p>I am a Lecturer at the Department of Linguistics at Faculty of Arts Chulalongkorn University in Bangkok, Thailand.
+      My current research interests are Thai core NLP infrastructure, NLP for Thai classical literature, deep learning techniques in NLP, discourse phenomena, and NLP in data science.</p>
+
+	    <p>You can call me Te or อรรถพล. Thamrongrattanarit is my Thai last name. I adopted Rutherford as my new last name. This is confusing, I know.</p>
+
+      </div> <!--col-->
 			<div class="col-md-4">
 				<img src="face4.jpg" width="300" >
 			</div>
-			<div class="col-md-8">
-			<h1>Jitkapat Sawatphol | จิตคพัฒน์ สวัสดิ์ผล</h1>
-			
-				<!--<a href="https://www.linkedin.com/in/jitkapat-sawatphol-903115119/"><img src="icons/linkedin.png" width=20></a>-->
-			</h4>
-			<p>I am Jitkapat (A.K.A. Nook or J.K.), an undergraduate student at Faculty of Arts, Chulalongkorn University in Bangkok, Thailand. </p>
-			<p>Despite majoring in English language and literature, I'm currently practicing programming and other related 
-			technical skills in pursuit of the field of natural language processing, emphasizing on Thai NLP.
-			I also write poems (and sometimes proses) as a hobby.</p>
-			<p>You can contact me at <em>jitkapat.s@gmail.com</em> </p>
-
-
-
-      </div> <!--col-->
-			
 		</div>
 
     <footer class="page-footer font-small">
@@ -45,7 +41,7 @@
                   </div>
             </div>
         </div>
-        <div class="footer-copyright text-right py-3 mb-5">© 2019 Copyright: Jitkapat Sawatphol </div>
+        <div class="footer-copyright text-right py-3 mb-5">© 2019 Copyright: Attapol Thamrongrattanarit </div>
       </div>
     </footer>
 
