--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,7 +8,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Attapol Rutherford - Chulalongkorn University</title>
+    <title>Jitkapat S.</title>
+	<style>
+	img {border-radius: 50%;}
+	</style>
   </head>
 
   <body>
@@ -15,21 +19,33 @@
 
 	<div class="container">
 		<div class="row my-5">
+			<div class="col-md-4">
+				<img src="face4.png" alt="Avatar" style="width:300px" >
+			</div>
 			<div class="col-md-8">
-			<h1>Attapol Rutherford | อรรถพล ธำรงรัตนฤทธิ์</h1>
-			<h4>attapolrutherford@gmail.com &emsp;
-				<a href="https://www.linkedin.com/in/terutherford/"><img src="icons/linkedin.png" width=20></a>
-				<a href="https://scholar.google.co.th/citations?user=7SsloT4AAAAJ&hl=en"><img src="icons/gscholar.png" width=20></a>
+			<h1>Jitkapat Sawatphol | จิตคพัฒน์ สวัสดิ์ผล</h1>
+			<h4>(A.K.A. Nook or J.K.)</h4>
+			
+				<!--<a href="https://www.linkedin.com/in/jitkapat-sawatphol-903115119/"><img src="icons/linkedin.png" width=20></a>-->
 			</h4>
-			<p>I am a Lecturer at the Department of Linguistics at Faculty of Arts Chulalongkorn University in Bangkok, Thailand.
-      My current research interests are Thai core NLP infrastructure, NLP for Thai classical literature, deep learning techniques in NLP, discourse phenomena, and NLP in data science.</p>
+			<p></p>
+			<p>I am an undergraduate student at Faculty of Arts, Chulalongkorn University in Bangkok, Thailand. </p>
+			<p>Despite majoring in English language and literature, I'm currently practicing programming and other related 
+			technical skills in pursuit of the field of natural language processing, emphasizing on Thai NLP.
+			I also write poems (and sometimes proses) as a hobby.</p>
+			<p>You can contact me at <em>jitkapat.s@gmail.com</em> </p>
+			
+			<h3>Projects</h3>
+			<ul>
+				<li><a href='https://jitkapat.github.io/thailitcorpus/'>Thai Literature Corpus</a></li>
+				<li><a href='https://github.com/jitkapat/thaipoetrygenerator/'>Thai Poetry Generator (Final Project for 2209372 Introduction to Computational Linguistics)</a></li>
+				<li><a href='https://github.com/jitkapat/PoetryAnalyzer/'>English Poetry Analyzer (Final Project for 2209671 Programming for Natural Language Processing)</a></li>
+			</ul>
 
-	    <p>You can call me Te or อรรถพล. Thamrongrattanarit is my Thai last name. I adopted Rutherford as my new last name. This is confusing, I know.</p>
+
 
       </div> <!--col-->
-			<div class="col-md-4">
-				<img src="face4.jpg" width="300" >
-			</div>
+			
 		</div>
 
     <footer class="page-footer font-small">
@@ -41,7 +57,7 @@
                   </div>
             </div>
         </div>
-        <div class="footer-copyright text-right py-3 mb-5">© 2019 Copyright: Attapol Thamrongrattanarit </div>
+        <div class="footer-copyright text-right py-3 mb-5">© 2019 Copyright: Jitkapat Sawatphol </div>
       </div>
     </footer>
 
