--- a/nav.htm
+++ b/nav.htm
@@ -13,16 +13,15 @@
 -->
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="index.html">Attapol T.R.</a>
+  <a class="navbar-brand" href="index.html">Jitkapat S.</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="lab.html">NLP@Chula</a>
-      <a class="nav-item nav-link" href="teaching.html">Teaching</a>
-      <a class="nav-item nav-link" href="cv.html">CV</a>
-      <a class="nav-item nav-link" href="talks.html">Talks</a>
+      <a class="nav-item nav-link" href="lab.html">Projects</a>
+      <a class="nav-item nav-link" href="teaching.html">Poetry</a>
+      <a class="nav-item nav-link" href="cv.html">Portfolio</a>
     </div>
   </div>
 </nav>
