--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-		<div id="included_navbar"> </div>
+		<!--<div id="included_navbar"> </div>-->
 
 	<div class="container">
 		<div class="row my-5">
