--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-		<!--<div id="included_navbar"> </div>-->
+		<div id="included_navbar"> </div>
 
 	<div class="container">
 		<div class="row my-5">
@@ -29,18 +29,15 @@
 				<!--<a href="https://www.linkedin.com/in/jitkapat-sawatphol-903115119/"><img src="icons/linkedin.png" width=20></a>-->
 			</h4>
 			<p></p>
-			<p>I am an undergraduate student at Faculty of Arts, Chulalongkorn University in Bangkok, Thailand. </p>
+			<p>
+				I am an undergraduate student at Faculty of Arts, Chulalongkorn University in Bangkok, Thailand. </p>
 			<p>Despite majoring in English language and literature, I'm currently practicing programming and other related 
 			technical skills in pursuit of the field of natural language processing, emphasizing on Thai NLP.
-			I also write poems (and sometimes proses) as a hobby.</p>
-			<p>You can contact me at <em>jitkapat.s@gmail.com</em> </p>
+			</p>
+			<p>I also write poems (and sometimes proses) as a hobby. </p>
+			<!--<p>You can contact me at <em>jitkapat.s@gmail.com</em> </p>-->
 			
-			<h3>Projects</h3>
-			<ul>
-				<li><a href='https://jitkapat.github.io/thailitcorpus/'>Thai Literature Corpus</a></li>
-				<li><a href='https://github.com/jitkapat/thaipoetrygenerator/'>Thai Poetry Generator (Final Project for 2209372 Introduction to Computational Linguistics)</a></li>
-				<li><a href='https://github.com/jitkapat/PoetryAnalyzer/'>English Poetry Analyzer (Final Project for 2209671 Programming for Natural Language Processing)</a></li>
-			</ul>
+			
 
 
 
