--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<img src="face4.png" alt="Avatar" style="width:300px" >
 			</div>
 			<div class="col-md-8">
-			<h1>Jitkapat Sawatphol | จิตคพัฒน์ สวัสดิ์ผล</h1>
+			<h1>Jitkapat Sawatphol</h1>
 			<h4>(A.K.A. Nook or J.K.)</h4>
 			
 				<!--<a href="https://www.linkedin.com/in/jitkapat-sawatphol-903115119/"><img src="icons/linkedin.png" width=20></a>-->
