--- a/nav.htm
+++ b/nav.htm
@@ -19,9 +19,8 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="lab.html">Projects</a>
-      <a class="nav-item nav-link" href="teaching.html">Poetry</a>
-      <a class="nav-item nav-link" href="cv.html">Portfolio</a>
+      <a class="nav-item nav-link" href="nlp.html">NLP</a>
+      <a class="nav-item nav-link" href="poetry.html">Poetry</a>
     </div>
   </div>
 </nav>
