customize navbar and other tweaks

--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
     <title>Jitkapat S.</title>
 	<style>
 	img {border-radius: 50%;}
+
+</style>
 	</style>
   </head>
 
   <body>
+		
 		<div id="included_navbar"> </div>
 
 	<div class="container">
