--- a/nav.htm
+++ b/nav.htm
@@ -13,14 +13,14 @@
 -->
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="index.html"><strong><h1>Jitkapat S.</h1></strong></a>
+  <a class="navbar-brand" href="index.html"><strong>Jitkapat</strong></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="nlp.html">NLP</a>
-      <a class="nav-item nav-link" href="poetry.html">Poetry</a>
+      <a class="nav-item nav-link" href="nlp.html"><b>NLP</b></a>
+      <a class="nav-item nav-link" href="poetry.html"><b>Poetry</b></a>
     </div>
   </div>
 </nav>
