--- a/nlp.html
+++ b/nlp.html
@@ -7,17 +7,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Natural Language Processing</title>
+	<link href="https://fonts.googleapis.com/css?family=Kanit|Mitr|Sarabun&display=swap" rel="stylesheet">
+	<style>
+	body {font-family: 'Sarabun', sans-serif;font-size: 18px;}
+	</style>
   </head>
-
+	
   <body>
 		<div id="included_navbar"> </div>
 
 	  <div class="container">
 		<div class="row mt-5">
 			<div class="col-lg-12">
-        <h1>Natural Language Processing</h1>
+        <h1><strong>Natural Language Processing</strong></h1>
 		<p>NLP is my current primary interest. I still have much to learn though. </p>
-      <h3>Projects</h3>
+      <h5><b>Projects</b></h5>
 			<ul>
 				<li><a href='https://jitkapat.github.io/thailitcorpus/'>Thai Literature Corpus</a></li>
 				<li><a href='https://github.com/jitkapat/thaipoetrygenerator/'>Thai Poetry Generator (Final Project for 2209372 Introduction to Computational Linguistics)</a></li>
