--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jitkapat S.</title>
+	<link href="https://fonts.googleapis.com/css?family=Kanit|Mitr|Sarabun&display=swap" rel="stylesheet">
 	<style>
+	body {font-family: 'Sarabun', sans-serif;font-size: 18px;}
 	img {border-radius: 50%;}
-
-</style>
 	</style>
+	
   </head>
-
   <body>
 		
 		<div id="included_navbar"> </div>
@@ -26,11 +26,11 @@
 				<img src="face4.png" alt="Avatar" style="width:300px" >
 			</div>
 			<div class="col-md-8">
-			<h1>Jitkapat Sawatphol</h1>
-			<h4>(A.K.A. Nook or J.K.)</h4>
+			<h1><strong>Jitkapat Sawatphol</strong></h1>
+			<h5>(A.K.A. Nook or J.K.)</h4>
 			
 				<!--<a href="https://www.linkedin.com/in/jitkapat-sawatphol-903115119/"><img src="icons/linkedin.png" width=20></a>-->
-			</h4>
+			</h5>
 			<p></p>
 			<p>
 				I am an undergraduate student at Faculty of Arts, Chulalongkorn University in Bangkok, Thailand. </p>
