--- a/poetry.html
+++ b/poetry.html
@@ -7,6 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Poetry</title>
+	<link href="https://fonts.googleapis.com/css?family=Kanit|Mitr|Sarabun&display=swap" rel="stylesheet">
+	<style>
+	body {font-family: 'Sarabun', sans-serif;font-size: 18px;}
+	</style>
   </head>
 
   <body>
@@ -15,10 +19,10 @@
 	  <div class="container">
 		<div class="row mt-5">
 			<div class="col-lg-12">
-        <h1>Poetry</h1>
+        <h1><strong>Poetry</strong></h1>
 		<p>I also have a creative side. Composing words into verses is an extremely enjoyable way to express sentiments.</p>
 
-			<h3>Written works</h3>
+			<h5><b>Written works</b></h5>
 			<ul>
 				<li>To be added...</li>
 			</ul>
