--- a/nlp.html
+++ b/nlp.html
@@ -23,7 +23,7 @@
 		<p>NLP is my current primary interest. I still have much to learn though. </p>
       <h5><b>Projects</b></h5>
 			<ul>
-				<li><a href='https://jitkapat.github.io/thailitcorpus/'>Thai Literature Corpus</a></li>
+				<li><a href='https://attapol.github.io/thai_lit_corpus.html'>Thai Literature Corpus</a></li>
 				<li><a href='https://github.com/jitkapat/thaipoetrygenerator/'>Thai Poetry Generator (Final Project for 2209372 Introduction to Computational Linguistics)</a></li>
 				<li><a href='https://github.com/jitkapat/PoetryAnalyzer/'>English Poetry Analyzer (Final Project for 2209671 Programming for Natural Language Processing)</a></li>
 			</ul>
