--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 			technical skills in pursuit of the field of natural language processing, emphasizing on Thai NLP.
 			</p>
 			<p>I also write poems (and sometimes proses) as a hobby. </p>
+			<p>Check out my latest blog post (written in Thai) <a href='https://medium.com/@jitkapat/%E0%B8%AA%E0%B8%B8%E0%B8%99%E0%B8%97%E0%B8%A3%E0%B8%A0%E0%B8%B9%E0%B9%88-%E0%B8%84%E0%B8%A3%E0%B8%B9%E0%B8%81%E0%B8%A7%E0%B8%B5-%E0%B8%9B%E0%B8%B5%E0%B9%84%E0%B8%8B%E0%B9%80%E0%B8%9A%E0%B8%AD%E0%B8%A3%E0%B9%8C-1ebc7813df79?postPublishedType=repub'>HERE</a></p>
 			<!--<p>You can contact me at <em>jitkapat.s@gmail.com</em> </p>-->
 			
 			
