--- a/nav.htm
+++ b/nav.htm
@@ -20,7 +20,8 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link" href="nlp.html"><b>NLP</b></a>
-      <a class="nav-item nav-link" href="poetry.html"><b>Poetry</b></a>
+	  <a class="nav-item nav-link" href="poetry.html"><b>Poetry</b></a>
+      <a class="nav-item nav-link" href="https://medium.com/@jitkapat/"><b>Blog</b></a>
     </div>
   </div>
 </nav>
