change theme and rework index page

--- a/nav.htm
+++ b/nav.htm
@@ -12,15 +12,15 @@
 <body>
 -->
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color:#5F4B8B">
   <a class="navbar-brand" href="index.html"><strong>Jitkapat</strong></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="nlp.html"><b>NLP</b></a>
-	  <a class="nav-item nav-link" href="poetry.html"><b>Poetry</b></a>
+      <a class="nav-item nav-link" href="#nlp"><b>NLP</b></a>
+	  <a class="nav-item nav-link" href="#poetry"><b>Poetry</b></a>
       <a class="nav-item nav-link" href="https://medium.com/@jitkapat/"><b>Blog</b></a>
     </div>
   </div>
