--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <title>Jitkapat S.</title>
 	<link href="https://fonts.googleapis.com/css?family=Kanit|Mitr|Sarabun&display=swap" rel="stylesheet">
 	<style>
-	body {font-family: 'Sarabun', sans-serif;font-size: 18px;}
+	body {font-family: 'Sarabun', sans-serif;font-size: 18px; background-color: #212121; color: white}
+	a {color: #9955D5;}
 	img {border-radius: 50%;}
+	
+	
 	</style>
 	
   </head>
@@ -22,10 +25,12 @@
 
 	<div class="container">
 		<div class="row my-5">
-			<div class="col-md-4">
+			<div class="col-md-4" style="text-align: center;">
+			<br>
 				<img src="face4.png" alt="Avatar" style="width:300px" >
 			</div>
 			<div class="col-md-8">
+			<br>
 			<h1><strong>Jitkapat Sawatphol</strong></h1>
 			<h5>(A.K.A. Nook or J.K.)</h4>
 			
@@ -37,17 +42,40 @@
 			<p>Despite majoring in English language and literature, I'm currently practicing programming and other related 
 			technical skills in pursuit of the field of natural language processing, emphasizing on Thai NLP.
 			</p>
-			<p>I also write poems (and sometimes proses) as a hobby. </p>
-			<p>Check out my latest blog post (written in Thai) <a href='https://medium.com/@jitkapat/%E0%B8%AA%E0%B8%B8%E0%B8%99%E0%B8%97%E0%B8%A3%E0%B8%A0%E0%B8%B9%E0%B9%88-%E0%B8%84%E0%B8%A3%E0%B8%B9%E0%B8%81%E0%B8%A7%E0%B8%B5-%E0%B8%9B%E0%B8%B5%E0%B9%84%E0%B8%8B%E0%B9%80%E0%B8%9A%E0%B8%AD%E0%B8%A3%E0%B9%8C-1ebc7813df79?postPublishedType=repub'>HERE</a></p>
+			<p>Check out my latest blog post (written in Thai) <a href='https://medium.com/@jitkapat/%E0%B8%AA%E0%B8%B8%E0%B8%99%E0%B8%97%E0%B8%A3%E0%B8%A0%E0%B8%B9%E0%B9%88-%E0%B8%84%E0%B8%A3%E0%B8%B9%E0%B8%81%E0%B8%A7%E0%B8%B5-%E0%B8%9B%E0%B8%B5%E0%B9%84%E0%B8%8B%E0%B9%80%E0%B8%9A%E0%B8%AD%E0%B8%A3%E0%B9%8C-1ebc7813df79?postPublishedType=repub'>here.</a></p>
 			<!--<p>You can contact me at <em>jitkapat.s@gmail.com</em> </p>-->
-			
-			
-
-
-
-      </div> <!--col-->
-			
+		
+      </div> <!--col-->	
 		</div>
+		
+		<div class="container">
+		<div class="row mt-5">
+			<div class="col-lg-12">
+        <h1 id="nlp"><strong>Natural Language Processing</strong></h1>
+		<p>NLP is my current primary interest. I still have much to learn though. </p>
+      <h5><b>Projects</b></h5>
+			<ul>
+				<li><a href='https://attapol.github.io/tlc.html'>Thai Literature Corpora</a></li>
+				<li><a href='https://github.com/jitkapat/thaipoetrygenerator/'>Thai Poetry Generator (Final Project for 2209372 Introduction to Computational Linguistics)</a></li>
+				<li><a href='https://github.com/jitkapat/PoetryAnalyzer/'>English Poetry Analyzer (Final Project for 2209671 Programming for Natural Language Processing)</a></li>
+			</ul>
+      </div>
+	</div>
+      </div>
+	  
+	  <div class="container">
+		<div class="row mt-5">
+			<div class="col-lg-12">
+        <h1 id="poetry"><strong>Poetry</strong></h1>
+		<p>I also have a creative side. Composing words into verses is an extremely enjoyable way to express sentiments.</p>
+
+			<h5><b>Written works</b></h5>
+			<ul>
+				<li>To be added...</li>
+			</ul>
+      </div>
+	</div>
+
 
     <footer class="page-footer font-small">
       <div class="container">
