--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
 		
-		<div id="included_navbar"> </div>
+		<div id="included_nav.htm"> </div>
 
 	<div class="container">
 		<div class="row my-5">
