--- a/nav.htm
+++ b/nav.htm
@@ -12,7 +12,7 @@
 <body>
 -->
 
-<nav class="navbar navbar-expand-lg" style="background-color:#5F4B8B">
+<nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color:#5F4B8B">
   <a class="navbar-brand" href="index.html"><strong>Jitkapat</strong></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
