--- a/index.html
+++ b/index.html
@@ -11,17 +11,32 @@
     <title>Jitkapat S.</title>
 	<link href="https://fonts.googleapis.com/css?family=Kanit|Mitr|Sarabun&display=swap" rel="stylesheet">
 	<style>
-	body {font-family: 'Sarabun', sans-serif;font-size: 18px; background-color: #212121; color: white}
-	a {color: #9955D5;}
+	body {font-family: 'Sarabun', sans-serif;font-size: 18px; background-color: white; color: #8D8E8A}
+	h1 {color: #659DBD}
+	h5 {color: #659DBD}
+	a {color: #BC986A;}
 	img {border-radius: 50%;}
-	
-	
+	nav {background-color: #659DBD;}
+	.trans 
 	</style>
 	
   </head>
   <body>
-		
-		<div id="included_navbar"> </div>
+		<div>
+		<nav class="navbar navbar-expand-lg navbar-dark">
+  <a class="navbar-brand" href=""><strong>Jitkapat</strong></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" href="#nlp"><b>NLP</b></a>
+	  <a class="nav-item nav-link" href="#poetry"><b>Poetry</b></a>
+      <a class="nav-item nav-link" href="https://medium.com/@jitkapat/"><b>Blog</b></a>
+    </div>
+  </div>
+</nav>
+		</div>
 
 	<div class="container">
 		<div class="row my-5">
