--- a/index.html
+++ b/index.html
@@ -1,118 +1,109 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Jitkapat S.</title>
-	<link href="https://fonts.googleapis.com/css?family=Kanit|Mitr|Sarabun&display=swap" rel="stylesheet">
+<head>
+	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Jitkapat S.</title>
+	<link href="https://fonts.googleapis.com/css?family=Taviraj|Sarabun&display=swap" rel="stylesheet">
 	<style>
-	body {font-family: 'Sarabun', sans-serif;font-size: 18px; background-color: white; color: #8D8E8A}
-	h1 {color: #659DBD}
-	h5 {color: #659DBD}
-	a {color: #BC986A;}
-	img {border-radius: 50%;}
-	nav {background-color: #659DBD;}
-	.trans 
+		body {
+			font-family: 'Taviraj', sans-serif;
+			font-size: 16px;
+			background-color: #ffffff;
+			color: rgba(0, 0, 0, .8)
+		}
+		a {
+			color: rgb(119, 9, 64);
+		}
+		nav {
+			background-color: transparent;
+			color: rgba(0, 0, 0, .8)
+		}
 	</style>
-	
-  </head>
-  <body>
-		<div>
-		<nav class="navbar navbar-expand-lg navbar-dark">
-  <a class="navbar-brand" href=""><strong>Jitkapat</strong></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link" href="#nlp"><b>NLP</b></a>
-	  <a class="nav-item nav-link" href="#poetry"><b>Poetry</b></a>
-      <a class="nav-item nav-link" href="https://medium.com/@jitkapat/"><b>Blog</b></a>
-    </div>
-  </div>
-</nav>
-		</div>
-
+</head>
+<body>
 	<div class="container">
 		<div class="row my-5">
-			<div class="col-md-4" style="text-align: center;">
-			<br>
-				<img src="face4.png" alt="Avatar" style="width:300px" >
+			<div class="col-md-3" style="text-align: center;">
+				<img src="jitkapat.jpg" alt="Avatar" style="width:200px;"></img>
 			</div>
-			<div class="col-md-8">
-			<br>
-			<h1><strong>Jitkapat Sawatphol</strong></h1>
-			<h5>(A.K.A. Nook or J.K.)</h4>
-			
-				<!--<a href="https://www.linkedin.com/in/jitkapat-sawatphol-903115119/"><img src="icons/linkedin.png" width=20></a>-->
-			</h5>
-			<p></p>
-			<p>
-				I am an undergraduate student at Faculty of Arts, Chulalongkorn University in Bangkok, Thailand. </p>
-			<p>Despite majoring in English language and literature, I'm currently practicing programming and other related 
-			technical skills in pursuit of the field of natural language processing, emphasizing on Thai NLP.
-			</p>
-			<p>Check out my latest blog post (written in Thai) <a href='https://medium.com/@jitkapat/%E0%B8%AA%E0%B8%B8%E0%B8%99%E0%B8%97%E0%B8%A3%E0%B8%A0%E0%B8%B9%E0%B9%88-%E0%B8%84%E0%B8%A3%E0%B8%B9%E0%B8%81%E0%B8%A7%E0%B8%B5-%E0%B8%9B%E0%B8%B5%E0%B9%84%E0%B8%8B%E0%B9%80%E0%B8%9A%E0%B8%AD%E0%B8%A3%E0%B9%8C-1ebc7813df79'>here.</a></p>
-			<!--<p>You can contact me at <em>jitkapat.s@gmail.com</em> </p>-->
-		
-      </div> <!--col-->	
+			<div class="col-md-9">
+				<p><h2><b>Jitkapat Sawatphol</b></h2></p>
+				<i class="fa fa-linkedin-square"></i>
+				<p>BA undergraduate, Faculty of Arts, Chulalongkorn University</p>
+				<p>Currently in pursuit of natural language processing field.</p>
+			</div>
 		</div>
-		
 		<div class="container">
-		<div class="row mt-5">
-			<div class="col-lg-12">
-        <h1 id="nlp"><strong>Natural Language Processing</strong></h1>
-		<p>NLP is my current primary interest. I still have much to learn though. </p>
-      <h5><b>Projects</b></h5>
-			<ul>
-				<li><a href='https://attapol.github.io/tlc.html'>Thai Literature Corpora</a></li>
-				<li><a href='https://github.com/jitkapat/thaipoetrygenerator/'>Thai Poetry Generator (Final Project for 2209372 Introduction to Computational Linguistics)</a></li>
-				<li><a href='https://github.com/jitkapat/PoetryAnalyzer/'>English Poetry Analyzer (Final Project for 2209671 Programming for Natural Language Processing)</a></li>
-			</ul>
-      </div>
+			<div class="row mt-5">
+				<div class="col-lg-12 ">
+					<h4><b>Past Projects</b></h4>
+					<div class="bs-component">
+						<div class="card border-secondary mb-3" style="max-width: 50rem;">
+							<div class="card-body">
+								<h5 class="card-title">Thai Literature Corpora</h5>
+								<p class="card-text">A compilation of machine-ingestible Thai classical literature texts
+									from <a href="https://vajirayana.org"> Vajirayana Digital Library</a>
+									and Thai National Historical Corpus project at Faculty of Arts, Chulalongkorn
+									University.</p>
+								<p class="card-text"> Internship Project for <a href="">NLP Lab@Chula</a> (Summer 2019)
+								</p>
+								<p class="card-text"> <a href="https://attapol.github.io/tlc.html">Download</a></p>
+							</div>
+						</div>
+					</div>
+					<div class="bs-component">
+						<div class="card border-secondary mb-3" style="max-width: 50rem;">
+							<div class="card-body">
+								<h5 class="card-title">Thai Poetry Generator</h5>
+								<p class="card-text">An experimental Thai poetry generator using character-based RNN
+									language models
+								</p>
+								<p>Final project for (Final Project for 2209372 Introduction to Computational
+									Linguistics</p>
+								<p><a href="https://github.com/jitkapat/thaipoetrygenerator">Github repository</a> |
+									<a
+										href="https://colab.research.google.com/drive/18RNQODEK5fmqIerBaNbJRPecEJeZbSkC#scrollTo=C9yPptFc3CHy&uniqifier=1">Code</a>
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row mt-5">
+				<div class="col-lg-12" style="padding-bottom:70px;">
+					<h4><b>Written Articles</b></h4>
+					<div class="bs-component">
+						<div class="card border-secondary mb-3" style="max-width: 50rem;">
+							<div class="card-body">
+								<h5 class="card-title">Word Frequency Visualization for Thai Literature</h5>
+								<p class="card-text">Full article: <a
+										href="https://medium.com/@jitkapat/%E0%B8%AA%E0%B8%B8%E0%B8%99%E0%B8%97%E0%B8%A3%E0%B8%A0%E0%B8%B9%E0%B9%88-%E0%B8%84%E0%B8%A3%E0%B8%B9%E0%B8%81%E0%B8%A7%E0%B8%B5-%E0%B8%9B%E0%B8%B5%E0%B9%84%E0%B8%8B%E0%B9%80%E0%B8%9A%E0%B8%AD%E0%B8%A3%E0%B9%8C-1ebc7813df79">
+										สุนทรภู่ ครูกวี ปีไซเบอร์</a> |
+									<a
+										href="https://colab.research.google.com/drive/175VFbcs7Smnxb_O6dOZvHmSUUkceh97e#scrollTo=5xsl2bwKC3TA">code</a>
+								</p>
+								<p>
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<footer class="site-footer h-card" style='text-align: center;'>
+			<div class="container center" >
+				&copy; 2019 Jitkapat Sawatphol
+			</div>
+		</footer>
 	</div>
-      </div>
-	  
-	  <div class="container">
-		<div class="row mt-5">
-			<div class="col-lg-12">
-        <h1 id="poetry"><strong>Poetry</strong></h1>
-		<p>I also have a creative side. Composing words into verses is an extremely enjoyable way to express sentiments.</p>
-
-			<h5><b>Written works</b></h5>
-			<ul>
-				<li>To be added...</li>
-			</ul>
-      </div>
-	</div>
-
-
-    <footer class="page-footer font-small">
-      <div class="container">
-        <div class="row">
-             <div class="col-md-12 py-3">
-                  <div class="flex-center">
-                    <hr/>
-                  </div>
-            </div>
-        </div>
-        <div class="footer-copyright text-right py-3 mb-5">© 2019 Copyright: Jitkapat Sawatphol </div>
-      </div>
-    </footer>
-
 	</div> <!-- /container -->
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-			<script> $(function(){ $("#included_navbar").load("nav.htm"); }); </script>
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  </body>
+	<!-- jQuery (necessary for Bootstrap' s JavaScript plugins) -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<script> $(function () { $("#included_navbar").load("nav.htm"); }); </script>
+	<!-- Bootstrap core JavaScript -->
+	<script src="vendor/jquery/jquery.min.js"></script>
+	<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
