--- a/index.html
+++ b/index.html
@@ -16,10 +16,6 @@
 		a {
 			color: rgb(119, 9, 64);
 		}
-		nav {
-			background-color: transparent;
-			color: rgba(0, 0, 0, .8)
-		}
 	</style>
 </head>
 <body>
@@ -47,7 +43,7 @@
 									from <a href="https://vajirayana.org"> Vajirayana Digital Library</a>
 									and Thai National Historical Corpus project at Faculty of Arts, Chulalongkorn
 									University.</p>
-								<p class="card-text"> Internship Project for <a href="">NLP Lab@Chula</a> (Summer 2019)
+								<p class="card-text"> Internship project at <a href="">NLP Lab@Chula</a> (Summer 2019)
 								</p>
 								<p class="card-text"> <a href="https://attapol.github.io/tlc.html">Download</a></p>
 							</div>
@@ -60,11 +56,10 @@
 								<p class="card-text">An experimental Thai poetry generator using character-based RNN
 									language models
 								</p>
-								<p>Final project for (Final Project for 2209372 Introduction to Computational
-									Linguistics</p>
-								<p><a href="https://github.com/jitkapat/thaipoetrygenerator">Github repository</a> |
+								<p>Final project for 2209372 Introduction to Computational Linguistics</p>
+								<p><a href="https://github.com/jitkapat/thaipoetrygenerator">GitHub repository</a> |
 									<a
-										href="https://colab.research.google.com/drive/18RNQODEK5fmqIerBaNbJRPecEJeZbSkC#scrollTo=C9yPptFc3CHy&uniqifier=1">Code</a>
+										href="https://colab.research.google.com/drive/18RNQODEK5fmqIerBaNbJRPecEJeZbSkC#scrollTo=C9yPptFc3CHy&uniqifier=1">code</a>
 								</p>
 							</div>
 						</div>
