--- a/index.html
+++ b/index.html
@@ -27,14 +27,38 @@
 			<div class="col-md-9">
 				<p><h2><b>Jitkapat Sawatphol</b></h2></p>
 				<i class="fa fa-linkedin-square"></i>
-				<p>BA undergraduate, Faculty of Arts, Chulalongkorn University</p>
-				<p>Currently in pursuit of natural language processing field.</p>
-			</div>
-		</div>
+				<p>Master student, School of Information Science and Technology, VISTEC</p>
+				<p>B.A. in English, Faculty of Arts, Chulalongkorn University</p>
+				<p>Currently in pursuit of natural language processing research and development, especially for Thai language.</p>
+			</div><p>:</p>
 		<div class="container">
 			<div class="row mt-5">
 				<div class="col-lg-12 ">
+					<h4><b>Research Interests</b></h4>
+					<ul>
+						<li>Subword representation</li>
+						<li>Language modeling</li>
+						<li>Natural language generation</li>
+					</ul>
+				</div>
+			</div>
+			<div class="row mt-5">
+				<div class="col-lg-12 ">
 					<h4><b>Past Projects</b></h4>
+					<div class="bs-component">
+						<div class="card border-secondary mb-3" style="max-width: 50rem;">
+							<div class="card-body">
+								<h5 class="card-title">Thai Poetry Generator</h5>
+								<p class="card-text">An experimental Thai poetry generator using character-based RNN
+									language models
+								</p>
+								<p>Final project for 2209372 Introduction to Computational Linguistics</p>
+								<p><a href="https://github.com/jitkapat/thaipoetrygenerator">GitHub repository</a> |
+									<a
+										href="https://colab.research.google.com/drive/18RNQODEK5fmqIerBaNbJRPecEJeZbSkC#scrollTo=C9yPptFc3CHy&uniqifier=1">code</a>
+								</p>
+							</div>
+						</div>
 					<div class="bs-component">
 						<div class="card border-secondary mb-3" style="max-width: 50rem;">
 							<div class="card-body">
@@ -49,18 +73,15 @@
 							</div>
 						</div>
 					</div>
-					<div class="bs-component">
-						<div class="card border-secondary mb-3" style="max-width: 50rem;">
-							<div class="card-body">
-								<h5 class="card-title">Thai Poetry Generator</h5>
-								<p class="card-text">An experimental Thai poetry generator using character-based RNN
-									language models
-								</p>
-								<p>Final project for 2209372 Introduction to Computational Linguistics</p>
-								<p><a href="https://github.com/jitkapat/thaipoetrygenerator">GitHub repository</a> |
-									<a
-										href="https://colab.research.google.com/drive/18RNQODEK5fmqIerBaNbJRPecEJeZbSkC#scrollTo=C9yPptFc3CHy&uniqifier=1">code</a>
-								</p>
+						<div class="bs-component">
+							<div class="card border-secondary mb-3" style="max-width: 50rem;">
+								<div class="card-body">
+									<h5 class="card-title">Thai Part-of-Speech Tagger</h5>
+									<p class="card-text">A part-of-speech tagger for Thai using Universal Dependencies tagset.
+									</p>
+									<p>Research project at <a href="">NLP Lab@Chula</a></p>
+									<p><a href="hhttps://github.com/jitkapat/thaipostagger">GitHub repository</a></p>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -89,7 +110,7 @@
 		</div>
 		<footer class="site-footer h-card" style='text-align: center;'>
 			<div class="container center" >
-				&copy; 2019 Jitkapat Sawatphol
+				&copy; 2020 Jitkapat Sawatphol
 			</div>
 		</footer>
 	</div>
