--- a/index.html
+++ b/index.html
@@ -36,12 +36,32 @@
 				<div class="col-lg-12 ">
 					<h4><b>Research Interests</b></h4>
 					<ul>
-						<li>Subword representation</li>
-						<li>Language modeling</li>
-						<li>Natural language generation</li>
+						<li>Generalized text representation learning</li>
+						<li>Authorship analysis</li>
+						<li>Topic modeling</li>
 					</ul>
 				</div>
 			</div>
+			<div class="row mt-5">
+				<div class="col-lg-12 ">
+					<h4><b>Publications</b></h4>
+					<div class="bs-component">
+						<div class="card border-secondary mb-3" style="max-width: 50rem;">
+							<div class="card-body">
+								<h5 class="card-title">Topic-Regularized Authorship Representation Learning</h5>
+								<p class="card-text"> A self-distillation framework to handle cross-topic open set authorship attribution.
+								</p>
+								<p>Accepted at EMNLP2022</p>
+								</p>
+							</div>
+						</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			
 			<div class="row mt-5">
 				<div class="col-lg-12 ">
 					<h4><b>Past Projects</b></h4>
