--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 			<div class="col-md-9">
 				<p><h2><b>Jitkapat Sawatphol</b></h2></p>
 				<i class="fa fa-linkedin-square"></i>
-				<p>Master student, School of Information Science and Technology, VISTEC</p>
+				<p>Research student at School of Information Science and Technology, VISTEC</p>
 				<p>B.A. in English, Faculty of Arts, Chulalongkorn University</p>
-				<p>Currently in pursuit of natural language processing research and development, especially for Thai language.</p>
-			</div><p>:</p>
+				<p>Currently in pursuit of natural language processing research and development.</p>
+			</div>
 		<div class="container">
 			<div class="row mt-5">
 				<div class="col-lg-12 ">
