update page alignment and update pic

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
@@ -13,11 +14,13 @@
 			background-color: #ffffff;
 			color: rgba(0, 0, 0, .8)
 		}
+
 		a {
 			color: rgb(119, 9, 64);
 		}
 	</style>
 </head>
+
 <body>
 	<div class="container">
 		<div class="row my-5">
@@ -25,114 +28,119 @@
 				<img src="jitkapat.jpg" alt="Avatar" style="width:200px;"></img>
 			</div>
 			<div class="col-md-9">
-				<p><h2><b>Jitkapat Sawatphol</b></h2></p>
+				<p>
+				<h2><b>Jitkapat Sawatphol</b></h2>
+				</p>
 				<i class="fa fa-linkedin-square"></i>
 				<p>Research student at School of Information Science and Technology, VISTEC</p>
 				<p>B.A. in English, Faculty of Arts, Chulalongkorn University</p>
 				<p>Currently in pursuit of natural language processing research and development.</p>
 			</div>
-		<div class="container">
-			<div class="row mt-5">
-				<div class="col-lg-12 ">
-					<h4><b>Research Interests</b></h4>
-					<ul>
-						<li>Generalized text representation learning</li>
-						<li>Authorship analysis</li>
-						<li>Topic modeling</li>
-					</ul>
-				</div>
-			</div>
-			<div class="row mt-5">
-				<div class="col-lg-12 ">
-					<h4><b>Publications</b></h4>
-					<div class="bs-component">
-						<div class="card border-secondary mb-3" style="max-width: 50rem;">
-							<div class="card-body">
-								<h5 class="card-title">Topic-Regularized Authorship Representation Learning</h5>
-								<p class="card-text"> A self-distillation framework to handle cross-topic open set authorship attribution.
-								</p>
-								<p>Accepted at EMNLP2022</p>
-								</p>
-							</div>
-						</div>
-								</div>
-							</div>
-						</div>
+			<div class="container">
+				<div class="row mt-5">
+					<div class="col-lg-12 ">
+						<h4><b>Research Interests</b></h4>
+						<ul>
+							<li>Generalized text representation learning</li>
+							<li>Authorship analysis</li>
+							<li>Topic modeling</li>
+						</ul>
 					</div>
 				</div>
-			</div>
-			
-			<div class="row mt-5">
-				<div class="col-lg-12 ">
-					<h4><b>Past Projects</b></h4>
-					<div class="bs-component">
-						<div class="card border-secondary mb-3" style="max-width: 50rem;">
-							<div class="card-body">
-								<h5 class="card-title">Thai Poetry Generator</h5>
-								<p class="card-text">An experimental Thai poetry generator using character-based RNN
-									language models
-								</p>
-								<p>Final project for 2209372 Introduction to Computational Linguistics</p>
-								<p><a href="https://github.com/jitkapat/thaipoetrygenerator">GitHub repository</a> |
-									<a
-										href="https://colab.research.google.com/drive/18RNQODEK5fmqIerBaNbJRPecEJeZbSkC#scrollTo=C9yPptFc3CHy&uniqifier=1">code</a>
-								</p>
-							</div>
-						</div>
-					<div class="bs-component">
-						<div class="card border-secondary mb-3" style="max-width: 50rem;">
-							<div class="card-body">
-								<h5 class="card-title">Thai Literature Corpora</h5>
-								<p class="card-text">A compilation of machine-ingestible Thai classical literature texts
-									from <a href="https://vajirayana.org"> Vajirayana Digital Library</a>
-									and Thai National Historical Corpus project at Faculty of Arts, Chulalongkorn
-									University.</p>
-								<p class="card-text"> Internship project at <a href="">NLP Lab@Chula</a> (Summer 2019)
-								</p>
-								<p class="card-text"> <a href="https://attapol.github.io/tlc.html">Download</a></p>
-							</div>
-						</div>
-					</div>
+				<div class="row mt-5">
+					<div class="col-lg-12 ">
+						<h4><b>Publications</b></h4>
 						<div class="bs-component">
 							<div class="card border-secondary mb-3" style="max-width: 50rem;">
 								<div class="card-body">
-									<h5 class="card-title">Thai Part-of-Speech Tagger</h5>
-									<p class="card-text">A part-of-speech tagger for Thai using Universal Dependencies tagset.
+									<h5 class="card-title">Topic-Regularized Authorship Representation Learning</h5>
+									<p class="card-text"> A self-distillation framework to handle cross-topic open set
+										authorship attribution.
 									</p>
-									<p>Research project at <a href="">NLP Lab@Chula</a></p>
-									<p><a href="hhttps://github.com/jitkapat/thaipostagger">GitHub repository</a></p>
+									<p>Accepted at EMNLP2022</p>
+									</p>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="row mt-5">
-				<div class="col-lg-12" style="padding-bottom:70px;">
-					<h4><b>Written Articles</b></h4>
-					<div class="bs-component">
-						<div class="card border-secondary mb-3" style="max-width: 50rem;">
-							<div class="card-body">
-								<h5 class="card-title">Word Frequency Visualization for Thai Literature</h5>
-								<p class="card-text">Full article: <a
-										href="https://medium.com/@jitkapat/%E0%B8%AA%E0%B8%B8%E0%B8%99%E0%B8%97%E0%B8%A3%E0%B8%A0%E0%B8%B9%E0%B9%88-%E0%B8%84%E0%B8%A3%E0%B8%B9%E0%B8%81%E0%B8%A7%E0%B8%B5-%E0%B8%9B%E0%B8%B5%E0%B9%84%E0%B8%8B%E0%B9%80%E0%B8%9A%E0%B8%AD%E0%B8%A3%E0%B9%8C-1ebc7813df79">
-										สุนทรภู่ ครูกวี ปีไซเบอร์</a> |
-									<a
-										href="https://colab.research.google.com/drive/175VFbcs7Smnxb_O6dOZvHmSUUkceh97e#scrollTo=5xsl2bwKC3TA">code</a>
-								</p>
-								<p>
-								</p>
+				<div class="row mt-5">
+					<div class="col-lg-12 ">
+						<h4><b>Past Projects</b></h4>
+						<div class="bs-component">
+							<div class="card border-secondary mb-3" style="max-width: 50rem;">
+								<div class="card-body">
+									<h5 class="card-title">Thai Poetry Generator</h5>
+									<p class="card-text">An experimental Thai poetry generator using character-based RNN
+										language models
+									</p>
+									<p>Final project for 2209372 Introduction to Computational Linguistics</p>
+									<p><a href="https://github.com/jitkapat/thaipoetrygenerator">GitHub repository</a> |
+										<a
+											href="https://colab.research.google.com/drive/18RNQODEK5fmqIerBaNbJRPecEJeZbSkC#scrollTo=C9yPptFc3CHy&uniqifier=1">code</a>
+									</p>
+								</div>
+							</div>
+							<div class="bs-component">
+								<div class="card border-secondary mb-3" style="max-width: 50rem;">
+									<div class="card-body">
+										<h5 class="card-title">Thai Literature Corpora</h5>
+										<p class="card-text">A compilation of machine-ingestible Thai classical literature texts
+											from <a href="https://vajirayana.org"> Vajirayana Digital Library</a>
+											and Thai National Historical Corpus project at Faculty of Arts, Chulalongkorn
+											University.</p>
+										<p class="card-text"> Internship project at <a href="">NLP Lab@Chula</a> (Summer 2019)
+										</p>
+										<p class="card-text"> <a href="https://attapol.github.io/tlc.html">Download</a></p>
+									</div>
+								</div>
+							</div>
+							<div class="bs-component">
+								<div class="card border-secondary mb-3" style="max-width: 50rem;">
+									<div class="card-body">
+										<h5 class="card-title">Thai Part-of-Speech Tagger</h5>
+										<p class="card-text">A part-of-speech tagger for Thai using Universal Dependencies tagset.
+										</p>
+										<p>Research project at <a href="">NLP Lab@Chula</a></p>
+										<p><a href="hhttps://github.com/jitkapat/thaipostagger">GitHub repository</a></p>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
+				
+				<div class="row mt-5">
+					<div class="col-lg-12" style="padding-bottom:70px;">
+						<h4><b>Written Articles</b></h4>
+						<div class="bs-component">
+							<div class="card border-secondary mb-3" style="max-width: 50rem;">
+								<div class="card-body">
+									<h5 class="card-title">Word Frequency Visualization for Thai Literature</h5>
+									<p class="card-text">Full article: <a
+											href="https://medium.com/@jitkapat/%E0%B8%AA%E0%B8%B8%E0%B8%99%E0%B8%97%E0%B8%A3%E0%B8%A0%E0%B8%B9%E0%B9%88-%E0%B8%84%E0%B8%A3%E0%B8%B9%E0%B8%81%E0%B8%A7%E0%B8%B5-%E0%B8%9B%E0%B8%B5%E0%B9%84%E0%B8%8B%E0%B9%80%E0%B8%9A%E0%B8%AD%E0%B8%A3%E0%B9%8C-1ebc7813df79">
+											สุนทรภู่ ครูกวี ปีไซเบอร์</a> |
+										<a
+											href="https://colab.research.google.com/drive/175VFbcs7Smnxb_O6dOZvHmSUUkceh97e#scrollTo=5xsl2bwKC3TA">code</a>
+									</p>
+									<p>
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				</div>
 			</div>
 		</div>
-		<footer class="site-footer h-card" style='text-align: center;'>
-			<div class="container center" >
-				&copy; 2020 Jitkapat Sawatphol
-			</div>
-		</footer>
+	</div>
+
+	
+	<footer class="site-footer h-card" style='text-align: center;'>
+		<div class="container center">
+			&copy; 2020 Jitkapat Sawatphol
+		</div>
+	</footer>
 	</div>
 	</div> <!-- /container -->
 	<!-- jQuery (necessary for Bootstrap' s JavaScript plugins) -->
@@ -142,4 +150,5 @@
 	<script src="vendor/jquery/jquery.min.js"></script>
 	<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
