--- a/index.html
+++ b/index.html
@@ -32,18 +32,19 @@
 				<h2><b>Jitkapat Sawatphol</b></h2>
 				</p>
 				<i class="fa fa-linkedin-square"></i>
-				<p>Research student at School of Information Science and Technology, VISTEC</p>
-				<p>B.A. in English, Faculty of Arts, Chulalongkorn University</p>
-				<p>Currently in pursuit of natural language processing research and development.</p>
+				<p>Research master's student at <a href="https://www.vistec.ac.th/academic/home.php?school=IST">School
+						of Information Science and Technology, VISTEC</a></p>
+				<p>B.A. in English (Chulalongkorn University)</p>
+				<p>(Expected Fall 2023) M.Eng in Information Science and Technology (VISTEC)</p>
 			</div>
 			<div class="container">
 				<div class="row mt-5">
 					<div class="col-lg-12 ">
 						<h4><b>Research Interests</b></h4>
 						<ul>
-							<li>Generalized text representation learning</li>
+							<li>Natural language processing</li>
 							<li>Authorship analysis</li>
-							<li>Topic modeling</li>
+							<li>Representation learning</li>
 						</ul>
 					</div>
 				</div>
@@ -54,10 +55,15 @@
 							<div class="card border-secondary mb-3" style="max-width: 50rem;">
 								<div class="card-body">
 									<h5 class="card-title">Topic-Regularized Authorship Representation Learning</h5>
+									<p class="card-text"> In Proceedings of EMNLP2022 (best short paper award)
+									</p>
 									<p class="card-text"> A self-distillation framework to handle cross-topic open set
 										authorship attribution.
 									</p>
-									<p>Accepted at EMNLP2022</p>
+									<p></p>
+									<p class="card-text"> <a
+											href="https://aclanthology.org/2022.emnlp-main.70">Paper</a> | <a
+											href="https://github.com/jitkapat/TopicReg">GitHub</a></p>
 									</p>
 								</div>
 							</div>
@@ -70,14 +76,28 @@
 						<div class="bs-component">
 							<div class="card border-secondary mb-3" style="max-width: 50rem;">
 								<div class="card-body">
+									<h5 class="card-title">Thai Part-of-Speech Tagger</h5>
+									<p class="card-text">A part-of-speech tagger for Thai using Universal
+										Dependencies tagset.
+									</p>
+									<p>Research project at <a href="https://attapol.github.io/lab.html">NLP
+											Lab@Chula</a> (2020)</p>
+									<p><a href="hhttps://github.com/jitkapat/thaipostagger">GitHub</a></p>
+								</div>
+							</div>
+						</div>
+						<div class="bs-component">
+							<div class="card border-secondary mb-3" style="max-width: 50rem;">
+								<div class="card-body">
 									<h5 class="card-title">Thai Poetry Generator</h5>
 									<p class="card-text">An experimental Thai poetry generator using character-based RNN
 										language models
 									</p>
-									<p>Final project for 2209372 Introduction to Computational Linguistics</p>
-									<p><a href="https://github.com/jitkapat/thaipoetrygenerator">GitHub repository</a> |
+									<p>Final project for 2209372 Introduction to Computational Linguistics (2019)</p>
+									<p><a href="https://github.com/jitkapat/thaipoetrygenerator">GitHub</a> |
 										<a
-											href="https://colab.research.google.com/drive/18RNQODEK5fmqIerBaNbJRPecEJeZbSkC#scrollTo=C9yPptFc3CHy&uniqifier=1">code</a>
+											href="https://colab.research.google.com/drive/18RNQODEK5fmqIerBaNbJRPecEJeZbSkC#scrollTo=C9yPptFc3CHy&uniqifier=1">
+											Colab </a>
 									</p>
 								</div>
 							</div>
@@ -85,31 +105,25 @@
 								<div class="card border-secondary mb-3" style="max-width: 50rem;">
 									<div class="card-body">
 										<h5 class="card-title">Thai Literature Corpora</h5>
-										<p class="card-text">A compilation of machine-ingestible Thai classical literature texts
+										<p class="card-text">A compilation of machine-ingestible Thai classical
+											literature texts
 											from <a href="https://vajirayana.org"> Vajirayana Digital Library</a>
-											and Thai National Historical Corpus project at Faculty of Arts, Chulalongkorn
+											and Thai National Historical Corpus project at Faculty of Arts,
+											Chulalongkorn
 											University.</p>
-										<p class="card-text"> Internship project at <a href="">NLP Lab@Chula</a> (Summer 2019)
+										<p class="card-text"> Internship project at <a
+												href="https://attapol.github.io/lab.html">NLP Lab@Chula</a> (Summer
+											2019)
 										</p>
-										<p class="card-text"> <a href="https://attapol.github.io/tlc.html">Download</a></p>
-									</div>
-								</div>
-							</div>
-							<div class="bs-component">
-								<div class="card border-secondary mb-3" style="max-width: 50rem;">
-									<div class="card-body">
-										<h5 class="card-title">Thai Part-of-Speech Tagger</h5>
-										<p class="card-text">A part-of-speech tagger for Thai using Universal Dependencies tagset.
+										<p class="card-text"> <a href="https://attapol.github.io/tlc.html">Download</a>
 										</p>
-										<p>Research project at <a href="">NLP Lab@Chula</a></p>
-										<p><a href="hhttps://github.com/jitkapat/thaipostagger">GitHub repository</a></p>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				
+
 				<div class="row mt-5">
 					<div class="col-lg-12" style="padding-bottom:70px;">
 						<h4><b>Written Articles</b></h4>
@@ -130,15 +144,15 @@
 						</div>
 					</div>
 				</div>
-				</div>
 			</div>
 		</div>
 	</div>
+	</div>
 
-	
+
 	<footer class="site-footer h-card" style='text-align: center;'>
 		<div class="container center">
-			&copy; 2020 Jitkapat Sawatphol
+			&copy; 2023 Jitkapat Sawatphol
 		</div>
 	</footer>
 	</div>
