--- a/index.html
+++ b/index.html
@@ -23,32 +23,33 @@
 
 <header>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	  <a class="navbar-brand" href="index.html">Jitkapat</a>
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	  </button>
-  
-	  <div class="collapse navbar-collapse" id="navbarColor02">
-		<ul class="navbar-nav mr-auto">
-		  <li class="nav-item active">
-			<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-		  </li>
-		  <li class="nav-item">
-			<a class="nav-link" href="bio.html">Bio</a>
-		  </li>
-		  <li class="nav-item">
-			<a class="nav-link" href="poetry.html">Poetry</a>
-		</ul>
-		<!--
+		<a class="navbar-brand" href="index.html">Jitkapat</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02"
+			aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+
+		<div class="collapse navbar-collapse" id="navbarColor02">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item active">
+					<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="bio.html">Bio</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="poetry.html">Poetry</a>
+			</ul>
+			<!--
 		<form class="form-inline my-2 my-lg-0">
 		  <input class="form-control mr-sm-2" type="text" placeholder="Search">
 		  <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
 		</form>
 		-->
-	  </div>
+		</div>
 	</nav>
-  </header>
-  
+</header>
+
 
 <body>
 	<div class="container">
@@ -60,7 +61,8 @@
 				<p>
 				<h2><b>Jitkapat Sawatphol</b></h2>
 				<h4><b>จิตคพัฒน์ สวัสดิ์ผล</b></h4>
-				<p> Email: jitkapat.s_s20@vistec.ac.th | <a href="https://twitter.com/jitkapat">Twitter</a> | <a href="https://scholar.google.com/citations?hl=th&user=RtWOcfwAAAAJ">Google scholar</a></p>
+				<p> Email: jitkapat.s_s20@vistec.ac.th | <a href="https://twitter.com/jitkapat">Twitter</a> | <a
+						href="https://scholar.google.com/citations?hl=th&user=RtWOcfwAAAAJ">Google scholar</a></p>
 				</p>
 				<i class="fa fa-linkedin-square"></i>
 				<p>Hi. I am Jitkapat. I'm a research student (M.Eng) at <a
@@ -68,9 +70,11 @@
 						of Information Science and Technology, VISTEC</a>. I have a background in humanities, especially
 					literary studies, and a little in introductory linguistics. I am currently supervised by <a
 						href="https://www.vistec.ac.th/academic/faculty_detail.php?school=IST&id=55">Assoc. Prof. Sarana
-						Nutanong</a>. I am also formerly a part of <a href="https://attapol.github.io/lab.html"> NLP@Chula</a>
-					group at <a href="https://www.arts.chula.ac.th/">Faculty of Arts, Chulalongkorn University.</a> 
-					Ideally, I am interested in applying NLP and generalized learning algorithms to interdisciplinary studies despite limited resources.</p>
+						Nutanong</a>. I am also formerly a part of <a href="https://attapol.github.io/lab.html">
+						NLP@Chula</a>
+					group at <a href="https://www.arts.chula.ac.th/">Faculty of Arts, Chulalongkorn University.</a>
+					Ideally, I am interested in applying NLP and generalized learning algorithms to interdisciplinary
+					studies despite limited resources.</p>
 			</div>
 			<div class="container">
 				<div class="row mt-5">
@@ -177,6 +181,21 @@
 								</div>
 							</div>
 						</div>
+
+						<div class="bs-component">
+							<div class="card border-secondary mb-3" style="max-width: 50rem;">
+								<div class="card-body">
+									<h5 class="card-title">Translation of Emily Dickinson's "Because I could not stop for death" (written in Thai)</h5>
+									<p class="card-text">Full article: <a
+											href="articles/FinalLitTrans.pdf">
+											รายงานการแปลกวีนิพนธ์ "Because I could not stop for Death" ("เพราะว่าฉันมิอาจแวะไปหา (ความตาย)")</a>
+									</p>
+									<p>
+									</p>
+								</div>
+							</div>
+						</div>
+
 					</div>
 				</div>
 			</div>
